# Athena-Recursive-AI

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
athena/: __init__.py  cli.py
athena/communication/: __init__.py  lm_studio_client.py  protocol.py  schemas.py
athena/config/: default.yaml  settings.py
athena/core/: expert_base.py  orchestrator.py  workspace.py
athena/experts/: creative.py  memory.py  reasoning.py  technical.py
athena/utils/: logging.py
docs/: SETUP.md
examples/: basic_query.py  custom_config.py  multi_turn_conversation.py  workspace_inspection.py
